security config updated